--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,9 @@ server.port=5454
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-
+#spring.cache.type=redis
+#spring.redis.host=redis-15850.c15.us-east-1-4.ec2.cloud.redislabs.com
+#spring.redis.port=15850
 
 
 spring.datasource.url=jdbc:sqlserver://nebulak.database.windows.net:1433;database=nebulak;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
